# GoogleTestCPlusPlus

./: .gitignore  CMakeLists.txt  Testing.cpp  Testing.hpp
test/: CMakeLists.txt  ExampleTests.cpp
